# xcmath

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  vcpkg.json  xcmath.hpp  xmake.lua
mobject/: complex.hpp  function.hpp  mat.hpp  quaternion.hpp  vec.hpp
src/: CMakeLists.txt  math.hpp  xcmath.hpp
src/compute/utils/: allocator.hpp  device.hpp  heapdevice.hpp  tvector.hpp
src/mobject/: complex.hpp  declaration.hpp  function.hpp  mat.hpp  quaternion.hpp  vec.hpp
src/symbolsystem/: CMakeLists.txt  constant.h  expression.cc  expression.h  fraction.h  monomial.h  polynomial.h  symbol.cc  symbol.h  xcmathConfig.h
src/symbolsystem/ops/: ops.h
src/utils/: compiling.hpp  concepts.h  show.hpp  types.hpp
test/: CMakeLists.txt  mat.cc  test1.cc  utils.cc  vec.cc  vecoperator.cc
tests/: CMakeLists.txt  function.cc  graphics.cc  mat.cc  quaternion.cc  symbol.cc  utils.cc  vec.cc
tests/compute/utils/: CMakeLists.txt  memorypool.cc
utils/: compiling.hpp
xcmath/: CMakeLists.txt  xcmath.hpp
xcmath/mobject/: complex.hpp  declaration.hpp  function.hpp  mat.hpp  quaternion.hpp  vec.hpp
xcmath/symbolsystem/: CMakeLists.txt  constant.h  expression.h  fraction.h  monomial.cc  monomial.h  polynomial.h  symbol.h  xcmathConfig.h
xcmath/symbolsystem/ops/: ops.cc  ops.h
xcmath/utils/: compiling.hpp  concepts.h  show.hpp  types.hpp
